--- a/app/src/main/res/layout/activity_schedule_trip_driver.xml
+++ b/app/src/main/res/layout/activity_schedule_trip_driver.xml
@@ -102,12 +102,12 @@
             android:id="@+id/fare_id_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="124dp"
+            android:layout_marginLeft="122dp"
             android:layout_marginTop="21dp"
             android:layout_toRightOf="@+id/fare_id"
             android:text="Free Ride"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <Button
             android:backgroundTint="@color/quantum_purpleA400"
@@ -130,7 +130,20 @@
             android:layout_below="@+id/fare_id"
             android:text="Max Chargeable Fare"
             android:textStyle="bold"
+            android:id="@+id/maxChargeTextview"
             android:textSize="18sp"/>
+        <TextView
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="96dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/fare_id_value"
+            android:text="Rs 211"
+            android:id="@+id/max_charge_value"
+            android:textColor="@color/Black"
+            android:layout_toRightOf="@+id/maxChargeTextview"/>
 
     </RelativeLayout>
 
