--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,7 +69,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginRight="10dp"
             android:background="@drawable/white_onclick_grey"
-            android:text="Driving, Find a Companion." />
+            android:text="Driving, Find a Rider" />
 
         <Button
             android:id="@+id/rider"
@@ -81,7 +81,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/white_onclick_grey"
-            android:text="Let us,  Find a Companion for u." />
+            android:text="Find a car" />
     </RelativeLayout>
 
     <RelativeLayout
